--- a/src/documents/styles/style.css.less
+++ b/src/documents/styles/style.css.less
@@ -9,15 +9,47 @@ body {
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
-  max-width: 900px;
+  max-width: 1000px;
 }
 
-h1 {
+.profile-content {
+  margin-left: 25px;
+}
+
+.profile-content h1 {
   margin-top: 40px;
+  margin-left: -25px;
 }
 
-h2 {
+.profile-content h2 {
   margin-top: 20px;
+  margin-left: -25px;
+}
+
+.profile-page {
+  margin-top: 25px;
+}
+.profile-page a {
+    color: inherit;
+}
+
+.profile-page a:hover {
+    color: #08c;
+    text-decoration: none;
+}
+
+
+
+#profile-picture {
+    display: inline-block;
+    min-width: 120px;
+    max-width: 120px;
+    height: 120px;
+    border-radius: 12px;
+    border: 4px solid #ccc;
+    margin-top: 20px;
+    background-image: url(/images/quartzmo-fleck-300.jpg);
+    background-size: 120px 120px;
 }
 
 div.post-date {
@@ -26,12 +58,53 @@ div.post-date {
   font-variant: small-caps;
 }
 
+strong {
+  font-family: Cochin, Palatino, Georgia, serif;
+  font-size: 125%;
+  font-weight: 400;
+}
+
+h3 em {
+  font-style: normal;
+  font-weight: normal;
+  color: #aaa;
+  font-size: 12px;
+  white-space: nowrap;
+}
 
 
-h1 { font-size: 28px; } // ~24px
-h2 { font-size: 20px; } // ~18px
-h3 { font-size: 16px; }
+
+h1 { font-size: 26px; } // ~24px
+h2 { font-size: 17px; } // ~18px
+h3 {
+  font-size: 15px;
+  line-height:21px;
+  margin-bottom: 0;
+}
 h4 { font-size: 14px; }
+
+
+
+.skills {
+    margin-left: 0;
+    list-style: none;
+}
+
+.skill {
+    display: inline-block;
+    background: rgba(230, 224, 224, 0.63);
+    padding: 2px 9px;
+    border-radius: 12px;
+    margin-top: 8px;
+}
+
+.skill img {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-size: 16px 16px;
+    vertical-align: text-bottom;
+}
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -39,7 +112,6 @@ h4 { font-size: 14px; }
 html,
 body {
   height: 100%;
-  background: #fafcff;
 /* The html and body elements cannot have any padding or margin. */
 }
 
@@ -60,8 +132,6 @@ footer {
 
 footer {
   padding: 20px;
-  color: darkred;
-  background-color: transparent;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
