--- a/src/documents/styles/style.css.less
+++ b/src/documents/styles/style.css.less
@@ -2,10 +2,6 @@ a, a:link {
   cursor: pointer;
 }
 
-body {
-  padding-top: 40px;
-}
-
 /* Custom container */
 .container-narrow {
   margin: 0 auto;
@@ -17,24 +13,30 @@ body {
 }
 
 .profile-content h1 {
-  margin-top: 40px;
-  margin-left: -22px;
+  margin-top: 17px;
 }
 
 .profile-content h2 {
-  margin-top: 21px;
-  margin-left: -22px;
-  margin-bottom: 0;
+  font-size: 18px;
+  font-variant: small-caps;
+  font-weight: 400;
+
+  margin: 0 0 0 10px;
 }
 
-.profile-page {
+.profile-content {
   margin-top: 25px;
 }
-.profile-page a {
+
+.profile-content .row {
+  margin-top: 10px;
+}
+
+.profile-content a {
     color: inherit;
 }
 
-.profile-page a:hover {
+.profile-content a:hover {
     color: #08c;
     text-decoration: none;
 }
@@ -57,6 +59,12 @@ body {
     margin-top: 20px;
     background-image: url(/images/quartzmo-fleck-300.jpg);
     background-size: 120px 120px;
+}
+
+
+
+.print-only {
+  display: none;
 }
 
 #contact {
@@ -85,25 +93,34 @@ h3 em {
 
 
 
-h1 { font-size: 26px; } // ~24px
-h2 {
-  font-size: 18px;
-}
+h1 { font-size: 26px; }
 
 h3 {
   font-size: 15px;
   line-height:21px;
+  font-weight: 500;
+  margin-top: 10px;
   margin-bottom: 0;
 }
 h4 { font-size: 14px; }
 
-.skills {
+.contact-links, .skills {
   margin-left: 0;
   list-style: none;
 }
 
-.skills li {
+.contact-links li, .skills li {
   display: inline-block;
+}
+
+
+
+.contact-links li a i {
+  display: inline-block;
+  min-width: 30px;
+}
+
+.skills li {
   background: inherit;
   padding: 2px 10px;
   border-radius: 3px;
@@ -118,6 +135,11 @@ h4 { font-size: 14px; }
   height: 16px;
   background-size: 16px 16px;
   vertical-align: text-bottom;
+}
+
+footer ul {
+  font-variant: small-caps;
+
 }
 
 /* Sticky footer styles
@@ -145,7 +167,7 @@ footer {
 }
 
 footer {
-  padding: 20px;
+  padding: 40px 20px 10px;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
@@ -173,6 +195,10 @@ footer {
 
 
 @media print {
+  body {
+    padding-top: 10px;
+    padding-left: 40px;
+  }
   * {
     color: #000 !important;
     text-shadow: none !important;
@@ -230,6 +256,17 @@ footer {
 
   #avatar-print {
     display: inline-block;
+  }
+
+  .contact-links li {
+    display: inherit;
+  }
+
+  .contact-links li a i {
+    min-width: 40px;
+  }
+  .print-only {
+    display: inline;
   }
 
 }
